src/styles/partials/_searchBar.scss
.searchBar {
  font-size: 1.3rem;
  text-align: center;
  width: 80%;
  margin: 0 auto;

  .searchBoxContainer {
    display: inline-block;
    position: relative;
  }

  .autocomplete {
    font-size: 19px;
    position: absolute;
    background-color: white;
    // width: inherit;
    border: 1px solid #333;
    border-top: none;
    list-style: none;
    text-align: left;
    top: 24px;
    left: 10px;
    right: 5px;
    padding: 0;

    li {
      width: 100%;

      .hiddenButton {
        display: none;
      }

      .suggestion {
        // text-align: left;
        background-color: transparent;
        box-shadow: none;
        border: none;
        color: #111;
        font-size: inherit;
        font-family: inherit;
        margin: 0;
        padding: 5px;
        width: 100%;
        letter-spacing: normal;
        line-height: normal;

        &:hover,
        &:focus {
          transform: none;
          background-color: #ddd;
          outline: none;
        }
      }
    }
  }

  .searchBox {
    display: inline-block;
    margin: 0 5px 0 10px;
    line-height: 2.5;

    ::placeholder {
      opacity: 0.25;
    }

    input {
      text-align: center;
      font-family: Ubuntu, sans-serif;
      font-weight: 400;
      border: 1px solid #333;
      box-shadow: -4px 4px #333;
      padding: 5px;
      outline: none;
    }
  }

  button {
    cursor: pointer;
    display: block;
    margin: 20px auto;
    padding: 5px 20px;
    border: 1px solid #111;

    background-color: #333;
    color: white;

    font-family: "Bebas Neue";
    font-size: 1.4rem;
    letter-spacing: 2px;

    box-shadow: 0 0 #111;
    transition: transform 0.2s ease-out, box-shadow 0.2s ease-out;

    &:hover,
    &:focus {
      box-shadow: -4px 4px #111;
      transform: translate(4px, -4px);
    }
  }
}

